--- a/api/vercel.json
+++ b/api/vercel.json
@@ -1,8 +1,8 @@
 {
   "version": 2,
-  "name": "petsgram-server",
-  "alias": ["petgram-api"],
-  "builds": [{ "src": "index.js", "use": "@now/node" }],
+  "alias": ["petsgram-api-mappedev"],
+  "scope": "mappedev",
+  "builds": [{ "src": "index.js", "use": "@vercel/node" }],
   "routes": [
     {
       "headers": {
